--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1031,6 +1031,302 @@ body {
   color: var(--brand-yellow);
 }
 
+.footer {
+  background-color: #84A178;
+}
+.footer__title {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #FCFCFC;
+}
+@media (min-width: 320px) and (max-width: 768px) {
+  .footer__title {
+    font-size: 18px;
+    line-height: 1.22;
+    margin-left: 10px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .footer__title {
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.23;
+    margin-top: 0;
+    margin-left: 33px;
+  }
+}
+@media (min-width: 1200px) {
+  .footer__title {
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 1.23;
+    margin-bottom: 60px;
+  }
+}
+.footer__title-passion {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #FCFCFC;
+}
+@media (min-width: 320px) and (max-width: 768px) {
+  .footer__title-passion {
+    display: block;
+    font-size: 36px;
+    line-height: 1.14;
+    letter-spacing: 0.04em;
+    margin-top: 16px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .footer__title-passion {
+    display: block;
+    font-size: 48px;
+    line-height: 1.22;
+    letter-spacing: 0.06em;
+  }
+}
+@media (min-width: 1200px) {
+  .footer__title-passion {
+    display: block;
+    font-size: 58px;
+    line-height: 1.22;
+    letter-spacing: 0.06em;
+    margin-top: 14px;
+  }
+}
+.footer__link {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  color: #131313;
+}
+@media (min-width: 320px) and (max-width: 768px) {
+  .footer__link {
+    font-size: 12px;
+    line-height: 1.83;
+    text-align: center;
+  }
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .footer__link {
+    font-size: 12px;
+    line-height: 1.86;
+    margin-left: -25px;
+  }
+}
+@media (min-width: 1200px) {
+  .footer__link {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.86;
+    letter-spacing: 0.02em;
+  }
+}
+.footer__link-number {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  color: #FFFFFF;
+}
+@media (min-width: 320px) and (max-width: 768px) {
+  .footer__link-number {
+    font-size: 12px;
+    line-height: 1.83;
+  }
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .footer__link-number {
+    font-size: 12px;
+    line-height: 1.86;
+  }
+}
+@media (min-width: 1200px) {
+  .footer__link-number {
+    font-size: 16px;
+    line-height: 1.86;
+    letter-spacing: 0.02em;
+  }
+}
+.footer__company {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  color: #7A7A7A;
+  text-align: center;
+}
+@media (min-width: 320px) and (max-width: 768px) {
+  .footer__company {
+    font-size: 14px;
+    line-height: 1.57;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .footer__company {
+    font-size: 14px;
+    line-height: 1.86;
+    letter-spacing: 0.02em;
+    padding-top: 12px;
+    padding-bottom: 12px;
+  }
+}
+@media (min-width: 1200px) {
+  .footer__company {
+    font-size: 12px;
+    line-height: 1.83;
+    letter-spacing: 0.02em;
+    padding-top: 12px;
+    padding-bottom: 12px;
+  }
+}
+.footer__border {
+  border-bottom: 1px solid #E1E1E1;
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .footer__border {
+    display: flex;
+    padding-bottom: 32px;
+    padding-top: 20px;
+  }
+}
+@media (min-width: 320px) and (max-width: 768px) {
+  .footer__border {
+    padding-bottom: 40px;
+  }
+}
+@media (min-width: 1200px) {
+  .footer__border {
+    display: flex;
+    margin-left: 16px;
+    margin-right: 16px;
+    padding-top: 60px;
+  }
+}
+@media (min-width: 1200px) {
+  .footer__links {
+    margin-left: auto;
+  }
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .footer__links {
+    margin-top: 49px;
+    margin-left: auto;
+    margin-right: 33px;
+  }
+}
+.footer__social {
+  list-style: none;
+  display: flex;
+  gap: 30px;
+}
+@media (min-width: 320px) and (max-width: 768px) {
+  .footer__social {
+    justify-content: flex-end;
+    margin-bottom: 20px;
+    margin-right: 20px;
+    margin-top: 60px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .footer__social {
+    margin-left: 34px;
+    justify-content: flex-end;
+    margin-bottom: 34px;
+  }
+}
+@media (min-width: 1200px) {
+  .footer__social {
+    justify-content: flex-end;
+    margin-bottom: 40px;
+    margin-top: 12px;
+  }
+}
+
+.footer__link-position {
+  text-align: right;
+}
+@media (min-width: 320px) and (max-width: 768px) {
+  .footer__link-position {
+    text-align: right;
+    margin-right: 20px;
+  }
+}
+
+a {
+  list-style: none;
+  text-decoration: none;
+}
+
+.social-link {
+  background-color: #F8D24E;
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  fill: #84A178;
+  transition: fill 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.git {
+  margin: 7px;
+  fill: #84A178;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.git:hover, .git:focus {
+  fill: #FCFCFC;
+}
+
+.telegram {
+  margin-top: 9px;
+  margin-right: 9px;
+  margin-bottom: 8px;
+  margin-left: 5.5px;
+  fill: #84A178;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.telegram:hover, .telegram:focus {
+  fill: #FCFCFC;
+}
+
+.facebook {
+  margin-top: 7px;
+  margin-bottom: 7px;
+  margin-right: 12px;
+  margin-left: 12px;
+  fill: #84A178;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.facebook:hover, .facebook:focus {
+  fill: #FCFCFC;
+}
+
+@media (min-width: 768px) {
+  .br {
+    display: none;
+  }
+}
+
+@media (min-width: 1200px) {
+  .title_br {
+    display: none;
+  }
+}
+
+.social-link a:focus svg {
+  fill: #FCFCFC;
+}
+
+@media (min-width: 320px) and (max-width: 1199px) {
+  .made {
+    display: block;
+  }
+}
+
 .header {
   padding-top: 12px;
   padding-bottom: 12px;
