--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,14 +1,16 @@
 <section class="customer-reviews">
   <div class="container">
     <div class="swiper">
-      <div class="swiper-button-prev"></div>
-
       <ul class="swiper-wrapper list">
         <li class="swiper-slide">
           <img
             class="swiper__image"
             src="./images/customer-reviews/review1@1x.jpg"
-            srcset="./images/customer-reviews/review1@2x.jpg 2x"
+            srcset="
+              ./images/customer-reviews/review1@1x.jpg 1x,
+              ./images/customer-reviews/review1@2x.jpg 2x
+            "
+            alt="Emily, Los Angeles"
           />
           <div class="swiper__text">
             I love visiting your cafe. You prepare the most delicious ice cream
@@ -16,26 +18,32 @@
             atmosphere and polite staff.
           </div>
           <h2 class="swiper__title">Emily, Los Angeles</h2>
-          <div class="swiper-pagination"></div>
         </li>
         <li class="swiper-slide">
           <img
             class="swiper__image"
             src="./images/customer-reviews/review2@1x.jpg"
-            srcset="./images/customer-reviews/review2@2x.jpg 2x"
+            srcset="
+              ./images/customer-reviews/review2@1x.jpg 1x,
+              ./images/customer-reviews/review2@2x.jpg 2x
+            "
+            alt="Bryan, New-York"
           />
           <div class="swiper__text">
             Every day we come to you with friends after classes in college. We
             love your ice cream and casual atmosphere!
           </div>
           <h2 class="swiper__title">Bryan, New-York</h2>
-          <div class="swiper-pagination"></div>
         </li>
         <li class="swiper-slide">
           <img
             class="swiper__image"
             src="./images/customer-reviews/review3@1x.jpg"
-            srcset="./images/customer-reviews/review3@2x.jpg 2x"
+            srcset="
+              ./images/customer-reviews/review3@1x.jpg 2x,
+              ./images/customer-reviews/review3@2x.jpg 2x
+            "
+            alt="Diana, Chicago"
           />
           <div class="swiper__text">
             Ice cream is my passion! I love your chocolate hazelnut ice cream!
@@ -43,10 +51,9 @@
             quickly!
           </div>
           <h2 class="swiper__title">Diana, Chicago</h2>
-          <div class="swiper-pagination"></div>
         </li>
       </ul>
-      <div class="swiper-button-next"></div>
+      <div class="swiper-pagination"></div>
     </div>
   </div>
 </section>
