--- a/src/partials/about-product.html
+++ b/src/partials/about-product.html
@@ -2,9 +2,9 @@
 <!-- <div class="overlay js-overlay-modal" data-modal="2"></div> -->
     <div class="modal about-product" data-modal="2">
     <!--   Svg иконка для закрытия окна  -->
+        <svg data-modal-close class="modal__close js-modal-close" xmlns="http://www.w3.org/2000/svg"               viewBox="0 0 24 24"><path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"/></svg>
 
-    <svg class="modal__close js-modal-close" xmlns="http://www.w3.org/2000/svg"               viewBox="0 0 24 24"><path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"/></svg>
-        <!-- <button class="buy-now__button">
+    <!-- <button class="buy-now__button">
             <svg class="modal__close js-modal-close" width="24" height="24">
         <use href="./images/svg/symbol-defs.svg#close"></use>
         </svg>
