--- a/src/partials/read-more.html
+++ b/src/partials/read-more.html
@@ -1,27 +1,37 @@
 <!-- Несколько модальных окон -->
-    <div class="modal read-more" data-modal="3">
-    <!--   Svg иконка для закрытия окна  -->
+<div class="modal read-more" data-modal="3">
+  <!--   Svg иконка для закрытия окна  -->
 
-    <svg class="modal__close js-modal-close" xmlns="http://www.w3.org/2000/svg"               viewBox="0 0 24 24"><path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"/></svg>
-        <!-- <button class="buy-now__button">
+  <svg
+    data-modal-close
+    class="modal__close js-modal-close"
+    xmlns="http://www.w3.org/2000/svg"
+    viewBox="0 0 24 24"
+  >
+    <path
+      d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"
+    />
+  </svg>
+  <!-- <button class="buy-now__button">
             <svg class="modal__close js-modal-close" width="24" height="24">
         <use href="./images/svg/symbol-defs.svg#close"></use>
         </svg>
         </button> -->
-        <h2 class="read-more__title">How it’s made?</h2>
-        <div class="read-more__container">
-            <div class="read-more__video">
-               <button type="button" class="read-more__button">
-                <svg class="read-more__icon" width="27" height="27">
-                  <use href="./images/svg/symbol-defs.svg#icon-play"></use>
-                </svg>
-               </button>
-            </div>
-        </div>
-        <p class="read-more-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-        </p>
-
-        </div>
-    <!-- Подложка под модальным окном -->
+  <h2 class="read-more__title">How it’s made?</h2>
+  <div class="read-more__container">
+    <div class="read-more__video">
+      <button type="button" class="read-more__button">
+        <svg class="read-more__icon" width="27" height="27">
+          <use href="./images/svg/symbol-defs.svg#icon-play"></use>
+        </svg>
+      </button>
+    </div>
+  </div>
+  <p class="read-more-text">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+    tempor incididunt ut labore et Lorem ipsum dolor sit amet, consectetur
+    adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+  </p>
+</div>
+<!-- Подложка под модальным окном -->
 <!-- <div class="overlay js-overlay-modal"></div> -->
