--- a/src/partials/franchise.html
+++ b/src/partials/franchise.html
@@ -24,7 +24,7 @@
     </p>
     <form class="modal-form" name="modal_form">
       <div class="modal-form-group" role="group">
-        <label class="modal-form-label" for="user_name"></label>
+        <label class="modal-form-label" for="write_user_name"></label>
         <div class="modal-form-wrapper">
           <input
             class="modal-form-field"
@@ -35,7 +35,7 @@
             pattern="^[a-zA-Z]+\s[a-zA-Z]+$"
           />
         </div>
-        <label class="modal-form-label" for="user_phone"></label>
+        <label class="modal-form-label" for="write_user_phone"></label>
         <div class="modal-form-wrapper">
           <input
             class="modal-form-field"
@@ -48,7 +48,7 @@
             maxlength="13"
           />
         </div>
-        <label class="modal-form-label" for="user_mail"></label>
+        <label class="modal-form-label" for="write_user_mail"></label>
         <div class="modal-form-wrapper">
           <input
             class="modal-form-field"
